# ardelio

./: CMakeLists.txt  README.md  imgui.ini  test.ascn
assets/: test_scene.ascn
examples/flappy_crow/: CMakeLists.txt  imgui.ini  main.ascn  main.cpp
include/: Ardelio.h  ardelio.h
src/: main.cpp
src/GameObjects/: GameObject.cpp  GameObject.h  Player2D.cpp  Player2D.h  Sprite2D.cpp  Sprite2D.h
src/Inputs/: Input.cpp  Input.h  InputAction.cpp  InputAction.h  InputEvent.h  Keycode.h
src/Math/: Vector2I.cpp  Vector2I.h  Vector3.cpp  Vector3.h
src/Resources/: Resource.cpp  Resource.h  Texture.cpp  Texture.h
src/Systems/: GameWindow.cpp  GameWindow.h
src/editor/: editor_window.cpp  editor_window.h  main.cpp  property.cpp  property.h
src/engine/: engine.cpp  engine.h  variant.cpp  variant.h
src/input/: input.cpp  input.h  keycode.h
src/math/: color.cpp  color.h  vector2.cpp  vector2.h  vector2i.cpp  vector2i.h  vector2u.cpp  vector2u.h  vector3.cpp  vector3.h
src/resources/: audio_file.cpp  audio_file.h  collision_shape.cpp  collision_shape.h  font.cpp  font.h  resource.cpp  resource.h  texture.cpp  texture.h
src/scene/: game_object.cpp  game_object.h  physics_body_2d.cpp  physics_body_2d.h  player_2d.cpp  player_2d.h  sprite_2d.cpp  sprite_2d.h
src/scene/gui/: button.cpp  button.h  gui_element.cpp  gui_element.h  text.cpp  text.h
src/setup/: game_window.cpp  game_window.h  gui.cpp  gui.h  physics_space_2d.cpp  physics_space_2d.h  variant.cpp  variant.h
